Made adjustments to the page heights. It will help to prevent overlapping of elements

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@
     background-size: cover;
 }
 .sectiontwo{
-    height: 70vh;
+    height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -73,7 +73,7 @@
 
 /* Start of section Three */
 .sectionthree{
-    height: 120vh;
+    height: 150vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -205,11 +205,14 @@
     margin-top: 10px;
     font-weight: 600;
 }
+.sectionthree ::placeholder{
+    padding-left: 20px;
+}
 /* End Of section three */
 
 /* Start Of section Four */
 .sectionfour{
-    height: 80vh;
+    height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -323,7 +326,7 @@
 
 /* Start of section Five */
 .sectionfive{
-    height: 70vh;
+    height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -486,7 +489,7 @@
 
 /* Start Of Section Six */
 .sectionsix{
-    height: 75vh;
+    height: 80vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -556,8 +559,8 @@
     border-bottom: 2px solid #106BF2;
 }
 .imgs img{
-    height: 300px;
-    width: 350px;
+    height: 250px;
+    width: 300px;
 }
 .imgs h1{
     color: #106BF2;
@@ -585,7 +588,7 @@
 
 /* End Of Section Seven */
 .sectionseven{
-    height: 50vh;
+    height: 60vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -605,7 +608,7 @@
 }
 .footer .left{
     height: 100%;
-    width: 20%;
+    width: 15%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -649,7 +652,7 @@
 }
 .footer .right{
     height: 100%;
-    width: 40%;
+    width: 45%;
     color: white;
     display: flex;
     flex-direction: column;
@@ -693,5 +696,8 @@
     font-size: 15px;
     letter-spacing: 1.5px;
     box-shadow: 0 0 5px #000;
+}
+.sectionseven ::placeholder{
+    padding-left: 20px;
 }
 /* End Of section Seven */
